--- a/books/ära-kasva-suureks/15.ru.md
+++ b/books/ära-kasva-suureks/15.ru.md
@@ -1,14 +1,14 @@
-## LUGU LAPSELIKULT PÜHENDUMISEST
-## Neil Armstrong
+## История детской посвященности
+## Нил Армстронг
 
-Kuidas kujunes nii, et just Neil Armstrongil õnnestus olla esimene inimene maailmas, kellele sai osaks au astuda Kuu pinnale? Miks just tema, aga mitte keegi teine? Vastus peitub lapselikus pühendumises.
+Как так получилось, что именно Нилу Армстронгу посчастливилось стать первым человеком, который удостоился чести ступить на поверхность Луны? Почему именно он и никто другой? Ответ заключается в детской посвященности.
 
-Juba väga varases eas oli Armstrong lummatud lendamisest. Ta mängis kolmeaastaselt mängulennukitega ja läks oma esimesele lennusõidule viie- või kuueaastasena. Kaheksa- või üheksa-aastasena ehitas ta balsapuust mudellennukeid. 15-aastasena oli ta apteegis tötades jõudnud koguda piisavalt raha, et hakata kodulähedases Wapakoneta lennujaamas Ohios lennutunde võtma.
+Армстронг был влюблен в полеты с очень раннего возраста. С трех лет он играл с самолетиками, а в пять или шесть прошел свой первый урок полетов. В возрасте восьми или девяти лет он построил несколько моделей самолетов из бальзового дерева. В пятнадцать смог, работая в аптеке, накопить достаточно денег, чтобы оплатить уроки полетов на расположенном неподалеку от дома аэродроме Wapakoneta в Охайо.
 
-16-aastasena algas tema karjäär omalaadse katselendurina. Ta lendas väikelennukitega, mille mootoritele oli kohalik mehaanik äsja teinud kapitaalhoolduse. Armstrong sai nõnda endale lennutunde koguda. Pärast katselendurina töötamist oli Armstrong sõjas hävituslendur ning seejärel littus NACA-ga, millest hiljem sai NASA kosmoseagentuur. 1969. aastaks oli 38-aastane Neil Armstrong oma kirele järgnedes jõudnud lennata rohkem kui 200 eri tüüpi lennumasinaga, sealhulgas erinevate puri-, propeller- ja reaktiivlennukitega, hävitajate, helikopterite ning kosmoserakettidega.
+В 16 лет началась его карьера летчика-испытателя. Он летал на маленьких самолетах после сделанного местным механиком капитального ремонта мотора. Так Армстронг наработал множество летных часов. После работы испытателем Армстронг был военным летчиком-истребителем, а затем присоединился к НАКА, которая впоследствии стала космическим агентством НАСА. К 1969 году благодаря своей страсти 38-летний Нил Армстронг успел полетать более чем на 200 различных типах летательных аппаратов, среди которых различные планеры, винтовые и реактивные самолеты, самолеты-истребители, вертолеты и космические ракеты.
 
-Armstrong töötas piloodina ning lisaks veel ka kosmoseinsenerina. Võttes arvesse tema suurt lennutundide arvu ja jäägitut pühendumist, oli ta 1969. aastal NASA jaoks igati loogiline ning parim valik, juhtimaks lendu Kuule. Sellest missionist sai tema karjääri loomulik jätk ja kulminatsioon, samas ka suurim proovilepanek elu jooksul, sest kui Apollo 11 meeskond alustas maandumist Kuule, selgus ootamatult, et arvuti ei suuda maandumist ellu viia.
+Армстронг работал пилотом, а также космическим инженером. Учитывая большое количество летных часов и безграничную посвященность делу, в 1969 году он стал для НАСА самым лучшим и логичным выбором для управления полетом к Луне. Эта миссия стала естественным продолжением и кульминацией его карьеры, а также самым большим испытанием в жизни, поскольку когда команда Аполлона 11 начала приземление на Луну, неожиданно выяснилось, что компьютер не сможет совершить посадку.
 
-Armstrong rakendas kõik oma elu jooksul talletatud varasemad kogemused ja maandas kosmoselaeva Eagle Kuu pinnale. Esimese inimesena Kuule astumine oli krooniks kogu tema senisele karjäärile. Suur au sai talle osaks ainult seetõttu, et ta juba 3-aastasena pühendus lapselikult jäägitult oma kirele, lendamisele. Sel ajal kui teised said täiskasvanuks, läksid ülikooli ja hankisid endale kontoritöö, keskendus Armstrong endiselt oma elus sellele, mida ta kõige enam armastas. Lapselikult ühele asjale pühendumine viis selleni, et ta muutis maailma ajalugu.
+Армстронг использовал весь свой опыт и посадил космический корабль Eagle на поверхность Луны. Первый шаг человека по поверхности Луны стал кульминацией его карьеры. Эта большая честь выпала ему потому, что с трех лет он отдавался своей страсти - полетам. Пока другие взрослели, ходили в университет и офис, Армстронг по-прежнему посвящал себя тому, что любил в жизни больше всего. Детская любовь к одному делу привела к тому, что он изменил ход истории.
 
-"PILOODID EI TUNNE KÕNDIMISEST ERILIST RÕÕMU. PILOOTIDELE MEELDIB LENDAMINE." Neil Alden Armstrong
+"Пилоты не очень любят ходить. Пилотам нравится летать." Нил Олден Армстронг
