12 chapter russian version

--- a/books/ära-kasva-suureks/12.ru.md
+++ b/books/ära-kasva-suureks/12.ru.md
@@ -1,27 +1,14 @@
-## LUGU LAPSELIKUST LIHTSUSEST
-## Mark Twain
-
 ## История детской непосредственности
 ## Марк Твен
 
-Legendaarse Ameerika kirjaniku Mark Twaini pärisnimi oli Samuel Langhorne Clemens. Lugu, kuidas ta endale kirjanikunimeks Mark Twain võttis, on üsna iseäralik.
+Настоящее имя Марка Твена, легендарного американского писателя, - Сэмюэл Лэнгхорн Клеменс. История о том, каким образом он взял себе в качестве рабочего псевдонима имя Марк Твен довольно необычна.
 
-Настоящее имя легендарного американского писателя Марка Твена было Сэмюэль Лангхорн Клеменс. История, как он себе в качестве псевдонима взял имя Марк Твен довольно таки необычна.
+Клеменс вырос в городе Ганнибал, стоящем на реке Миссисипи, и с детства мечтал стать капитаном речного парохода. С 21 года он начал учиться управлять пароходом на реке Миссисипи, претворяя свою детскую мечту в жизнь. И два года спустя уже лицензированным капитаном парохода он приступил к постоянной работе.
 
-Clemens kasvas üles Mississippi jõe ääres asuvas Hannibali linnas ning unistas lapsest saati jõeaurulaevakapteniks saamisest. 21-aastaselt viis ta enda lapsepõlve unistuse ellu, asudes õppima aurulaeva juhtimist Mississippi jõel. Kaks aastat hiljem asus ta litsentseeritud aurikujuhina alaliselt tööle.
+Он любил свою работу - это была интересная, хорошо оплачиваемая должность с высоким социальным статусом. Управление пароходом было ответственным делом, поскольку приходилось постоянно избегать мелей. Для того чтобы пароход мог безопасно передвигаться, глубина реки должна была составлять как минимум 12 футов, и среди членов экипажа любимыми мерами глубины были "марк ван" (марк один), т.е. один сажень, или "марк твен" (марк два), т.е, две сажени, что означало безопасную глубину в 12 футов. "Твен" это устаревшая форма слова "ту" (два).
 
-Клеменс вырос в районе реки Миссисипи расположенном в городе Ганнибал и с детства мечтал стать капитаном речного парохода. С 21 года начал претворять он свою мечту детства в жизнь, начав учиться управлять пароходом на реке Миссисипи. Спустя два года приступил он лицензированным водителем парохода к постоянной работе.
+К сожалению капитаном парохода он смог пробыть всего два года, а затем разразившаяся гражданская война приостановила речное сообщение. Однако поскольку сердцу Клеменса работа на реке была очень мила, позже в возрасте 27 лет во время написания одного рассказа о путешествиях, он впервые взял себе псевдоним Марк Твен. С точки зрения взрослого человека имя, конечно же, должно быть серьезным и значить что-то логичное. Но Марк Твен исходил из своей детской непосредственности - он просто взял имя, близкое сердцу. Поскольку "марк твен" означает безопасную глубину, то конечно же со времен работы на реке у него остались теплые ассоциации с этим термином.
 
-Ta armastas oma tööd - see oli huvitav, hästi tasustatud ja kõrge sotsiaalse staatusega amet. Auriku juhtimine oli vastutusrikas töö, kuna pidevalt tuli vältida madalikke. Selleks et aurik saaks ohutult navigeerida, pidi jõe sügavus olema vähemalt 12 jalga. Kuna üks süld on ligikaudu 6 jalga, siis oli meeskonnaliikmetel kombeks sügavust mõõtes hõigata kas "mark one" (märk üks), ehk siis üks süld, voi "mark twain" (märk kaks), ehk kaks sülda, mis tähistas ohutut sügavust 12 jalga. "Twain" on numbri "two" (kaks) vanamoodne nimetus.
+Это взятое из сленга Миссисипи ребяческое имя стало в течение жизни автора знаменитым на весь мир. Однако кто знает, быть может и не стал бы он никогда автором таких хороших произведений, если бы не имя, которое ему так нравилось.
 
-Он любил свою работу - это была интересная, хорошо оплачиваемая и с высоким социальным статусом должность. Управление пароходом было ответственной работой, поскольку постоянно приходилось избегать мелей. Для того чтобы пароход мог безопасно передвигаться, глубина реки должна была быть как минимум 12 футов, поэтому была среди членов экипажа любимая о глубине мера звать или "марк ван" (марк один), т.е. один сажень, или "марк твен" ("марк два"), т.е, две сажени, что означало безопасную глубину в 12 футов. "Твен" это старинное название от "ту" (два).
-
-Kahjuks jõudis ta laevajuht olla ainult kaks aastat, sest kodusõja puhkedes peatati jõeliiklus. Kuid kuna Clemensile oli töötamine jõel südamelähedane, siis võttiski ta hiljem, 27-aastasena ühte reisijuttu kirjutades esmakordselt kasutusele kirjanikunime Mark Twain. Täiskasvanulikult lähenedes peaks nimi ikka midagi loogilist ja asjalikku tähendama. Kuid Mark Twain lähtus lapselikust lihtsusest - ta lihtsalt võttis endale nime, mis oli talle südamelähedane. Kuna "mark twain" tähendab ohutut sügavust, siis kindlasti kaasnesid omal ajal jõel töötades selle terminiga südantsoojendavad positiivsed emotsioonid.
-
-К сожалению он смог пробыть капитаном парохода всего два года, поскольку разразившаяся гражданская война приостановила речное сообщение.
-
-
-
-Igal juhul sai see Mississippi slängist võetud lapselik nimi veel tema eluajal üle maailma kuulsaks. Ning kes teab, võib-olla ei oleks ta kunagi nii häid raamatuid kirjutanudki, kui ta poleks võtnud endale just seda nime, mis talle nii väga meeldis.
-
-"MA POLE KUNAGI KOOLIHARIDUSEL LASKNUD SEKKUDA OMA HARITUSSE." Samuel Langhorne Clemens
+"Я никогда не позволял школьному образованию вмешиваться в мое образование". Сэмюэль Лангхорн Клеменс
