--- a/kodutöö/20240805.md
+++ b/kodutöö/20240805.md
@@ -1,16 +1,17 @@
 # Kodutöö 2024-08-05
 
-- saama valmis (справиться)
-- saama otsa (кончаться)
-- saama tagasi (получать обратно)
-- saama läbi (обходиться)
-- saama kätte (приобретать, научиться)
-- saama vihaseks (злиться, сердиться)
-- saama palka (получать зарплату, зарабатывать)
-- saama selgeks (стало ясно)
-- saama kätte (выучить)
-- saama otsa (на исходе, заканчиваться)
-- saama välja (выбраться)
+1. saama otsa (кончаться)
+2. saama tagasi (получать обратно)
+3. saama valmis (справиться)
+4. saama läbi (обходиться)
+5. saama palka (получать зарплату, зарабатывать)
+6. saama kätte (выучить)
+7. saama otsa (на исходе, заканчиваться)
+8. saama välja (выбраться)
+9. saama selgeks (стало ясно)
+10. saama kätte (приобретать, научиться)
+11. saama vihaseks (злиться, сердиться)
+
 
 1. Mu kannatus (терпение) ______ ______.
 2. Ma tahan oma raha ______ ______.
@@ -23,3 +24,16 @@
 9. Kõik ______ korralt ______.
 10. Enne kooliminekut tuleb lugemisoskus ______ ______.
 11. ______ päris ______.
+
+
+1. Mu kannatus saab otsa.
+2. Ma tahan oma raha tagasi saada.
+3. Selle tööga saab igaüks valmis.
+4. Ma olen harjunud vähesega läbi saama.
+5. Ma hakkasin saama paremat palga.
+6. Koolis sai kätte saksa keele.
+7. Lühike suvi on otsa saamas.
+8. Ma saan kuidagi kodust välja.
+9. Kõik sai korralt selgeks.
+10. Enne kooliminekut tuleb lugemisoskus kätte saada.
+11. Sai päris vihaseks.
