--- a/kodutöö/20240805.md
+++ b/kodutöö/20240805.md
@@ -1,16 +1,18 @@
 # Kodutöö 2024-08-05
 
-1. saama otsa (кончаться)
-2. saama tagasi (получать обратно)
-3. saama valmis (справиться)
-4. saama läbi (обходиться)
-5. saama palka (получать зарплату, зарабатывать)
-6. saama kätte (выучить)
-7. saama otsa (на исходе, заканчиваться)
-8. saama välja (выбраться)
-9. saama selgeks (стало ясно)
-10. saama kätte (приобретать, научиться)
-11. saama vihaseks (злиться, сердиться)
+## Täida lüngad sobivate sõnadega
+
+- saama otsa (кончаться)
+- saama tagasi (получать обратно)
+- saama valmis (справиться)
+- saama läbi (обходиться)
+- saama palka (получать зарплату, зарабатывать)
+- saama kätte (выучить)
+- saama otsa (на исходе, заканчиваться)
+- saama välja (выбраться)
+- saama selgeks (стало ясно)
+- saama kätte (приобретать, научиться)
+- saama vihaseks (злиться, сердиться)
 
 
 1. Mu kannatus (терпение) ______ ______.
@@ -25,6 +27,7 @@
 10. Enne kooliminekut tuleb lugemisoskus ______ ______.
 11. ______ päris ______.
 
+## Õige vastus
 
 1. Mu kannatus saab otsa.
 2. Ma tahan oma raha tagasi saada.
