--- a/books/ära-kasva-suureks/38.ee.md
+++ b/books/ära-kasva-suureks/38.ee.md
@@ -15,7 +15,7 @@ Juuksur lõpetas oma töö ja klient lahkus salongist. Vaid hetk pärast juuksur
 
 Klient pöördus juuksurisalongi tagasi ning ütles habemeajajale: "Tead mis? Habemeajajaid ei ole olemas."
 
-"Kuidas sa saad seda öelda?" küsis üllatunud habemeajaja. Ma olen siin ja ma olen habemeajaja. Ning ma just teenindasin sind!"
+"Kuidas sa saad seda öelda?" küsis üllatunud habemeajaja. "Ma olen siin ja ma olen habemeajaja. Ning ma just teenindasin sind!"
 
 "Ei!" hüüdis klient. Habemeajajaid pole olemas, sest kui nad oleksid olemas, siis ei oleks väljas räpaste pikkade juuste ning piramata habemega inimesi, nagu see mees seal."
 
