--- a/books/ära-kasva-suureks/38.ru.md
+++ b/books/ära-kasva-suureks/38.ru.md
@@ -5,13 +5,13 @@
 
 "Почему вы так считаете?" спросил клиент.
 
-"Ну достаточно просто выйти на улицу, чтобы осознать, что Бога нет. Скажите, если бы Бог существовал, разве было бы на свете столько больных людей? Было бы так много брошенных детей? Если бы Бог был, не существовало бы боли и страданий. Я не могу себе представить любящего Бога, который бы допустил подобное."
+"Ну достаточно просто выйти на улицу, чтобы осознать, что Бога нет. Скажите, если бы Бог существовал, разве было бы на свете столько больных людей? Было бы так много брошенных детей? Если бы Бог был, не существовало бы ни боли ни страданий. Я не могу себе представить любящего Бога, который бы допустил подобное."
 
 Клиент задумался, но не хотел спорить и поэтому ничего не ответил.
 
 Парикмахер закончил свою работу, и клиент покинул салон. Почти сразу же на улице он увидел человека с длинными засаленными волосами и бородой до колен. Он выглядел грязным и неопрятным.
 
-Клиент вернулся в салон и сказал парикмахеру: "Знаете, парикмахеров не существует."
+Клиент вернулся и сказал парикмахеру: "Знаете, парикмахеров не существует."
 
 "Как вы можете так говорить?" изумился парикмахер. Я здесь, и я парикмахер. Более того, я только что вас подстриг!"
 
@@ -21,4 +21,4 @@
 
 "Вот именно!" воскликнул клиент. "С Богом все в точности так же. Он существует, но дело в том, что люди не ищут его и не приходят к нему. Поэтому в мире столько боли и страданий."
 
-"И скажу я вам, просите и вам воздастся; ищите и вы найдете; постучите и дверь откроется перед вами." Иисус из Назарета
+"И скажу я вам, просите и вам воздастся; ищите и вы найдете; постучите в дверь, и она откроется перед вами." Иисус из Назарета
