--- a/kodutöö/20240805.md
+++ b/kodutöö/20240805.md
@@ -15,17 +15,17 @@
 - saama vihaseks (злиться, сердиться)
 
 
-1. Mu kannatus (терпение) ______ ______.
-2. Ma tahan oma raha ______ ______.
-3. Selle tööga ______ igaüks ______.
-4. Ma olen harjunud vähesega ______ ______.
-5. Ma hakkasin ______ paremat ______.
-6. Koolis ______ ______ saksa keele. 
-7. Lühike suvi on ______ ______.
-8. Ma ______ kuidagi kodust ______.
-9. Kõik ______ korralt ______.
-10. Enne kooliminekut tuleb lugemisoskus ______ ______.
-11. ______ päris ______.
+1. Mu kannatus _____ _____.
+2. Ma tahan oma raha _____ _____.
+3. Selle tööga _____ igaüks _____.
+4. Ma olen harjunud vähesega _____ _____.
+5. Ma hakkasin _____ paremat _____.
+6. Koolis _____ _____ saksa keele. 
+7. Lühike suvi on _____ _____.
+8. Ma _____ kuidagi kodust _____.
+9. Kõik _____ korralt _____.
+10. Enne kooliminekut tuleb lugemisoskus _____ _____.
+11. _____ päris _____.
 
 ## Õige vastus
 
