--- a/kodutöö/20240805.md
+++ b/kodutöö/20240805.md
@@ -2,16 +2,14 @@
 
 ## Täida lüngad sobivate sõnadega
 
-- saama otsa (кончаться)
+- saama otsa (кончаться, заканчиваться, быть на исходе) (х2)
 - saama tagasi (получать обратно)
 - saama valmis (справиться)
 - saama läbi (обходиться)
 - saama palka (получать зарплату, зарабатывать)
-- saama kätte (выучить)
-- saama otsa (на исходе, заканчиваться)
 - saama välja (выбраться)
 - saama selgeks (стало ясно)
-- saama kätte (приобретать, научиться)
+- saama kätte (выучить, приобретать, научиться) (х2)
 - saama vihaseks (злиться, сердиться)
 
 
@@ -34,7 +32,7 @@
 3. Selle tööga saab igaüks valmis.
 4. Ma olen harjunud vähesega läbi saama.
 5. Ma hakkasin saama paremat palga.
-6. Koolis sai kätte saksa keele.
+6. Koolis sai kätte saksa keele. // Ma sai selgeks saksa keele.
 7. Lühike suvi on otsa saamas.
 8. Ma saan kuidagi kodust välja.
 9. Kõik sai korralt selgeks.
