--- a/kodutöö/20240808.md
+++ b/kodutöö/20240808.md
@@ -1,19 +1,15 @@
 # Kodutöö 2024-08-08
 
-## Täida lüngad sobivate sõnadega
+## Täida lüngad sobivate sõnadega (Заполните пропуски подходящими словами)
 
-- saama teada (узнавать)
-- saama otsa (на исходе, заканчиваться)
-- saama sisse (попасть вовнутрь)
+- saama teada (узнавать) (x2)
+- saama sisse (попасть вовнутрь) (x2)
 - saama välja (выбираться, выкарабкиваться)
-- läbi saama (обходиться)
-- läbi saama (ладить, поддерживать дружеские отношения)
-- saama teada (узнавать)
-- juurde saama (добавить, прибавить)
-- saama teada (узнавать) 
+- saama juurde (прибавить, добавить, получать дополнительно) (x2)
+- saama läbi (обходиться, ладить, поддерживать дружеские отношения) (x3)
+- saama otsa (на исходе, заканчиваться)
 - saama vihaseks (разозлится, рассердится)
-- läbi saama (ладить)
-- saama juurde (прибавить, добавить, получать дополнительно)
+
 
 1. Ema _____ _____ poisi peale.
 2. Raha hakkab _____ _____.
@@ -31,8 +27,8 @@
 
 ## Õige vastus
 
-1. Ema sai teada poisi peale.
-2. Raha hakkab osta saama.
+1. Ema sai vihaseks poisi peale.
+2. Raha hakkab otsa saama.
 3. Kedagi polnud kodus, ma ei saanud sisse.
 4. Tuleb võlgadest välja saada.
 5. Ilma tööta läbi ei saa.
@@ -40,6 +36,6 @@
 7. Sai sellest aegsasti teada.
 8. Sai selle juurde usaldusväärsest allikast.
 9. Ta kibeles sai teada, millest seal räägiti.
-10. Pika kolkimise peale sai vihaseks.
+10. Pika kolkimise peale sai sisse.
 11. Nad saavad teineteisega hästi läbi.
 12. Sai palka juurde.
